# document-tools

./: .bumpversion.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
document_tools/: __init__.py  encode_functions.py  encoders.py  tokenize.py  utils.py
document_tools/documents/: __init__.py  base.py
document_tools/encoders/: __init__.py  encoders.py
installation/: index.html
notebooks/dev/: README.md  create_test_dataset.ipynb  test_classlabel.ipynb  update_dataset.ipynb
search/: search_index.json
tests/: __init__.py  test_base_encoder.py  test_document_tools.py  test_encode_functions.py  test_tokenize.py  test_utils.py
tests/documents/: test_base.py  test_image.py  test_pdf.py
usage/: index.html
